fix extra whitespace

--- a/css/main.css
+++ b/css/main.css
@@ -147,10 +147,6 @@ ul.horizontal li.selected {
   width:100%;
 }
 
-#content .main-section {
-  margin-top: 50px;
-}
-
 #content #showcase {
   margin-left: 0;
   border-bottom: none;
